tests/fixtures/invalid/int_pow_str.py
# Cannot power Int and Str
x: int = 1 ** "hello"
